2008-07-03  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidCallingProblematicMethodsTest.cs: Add two more test cases
	to achieve 100% coverage of the rule.

2008-07-03  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidCallingProblematicMethodsTest.cs: New.  Unit tests for
	AvoidCallingProblematicMethodsRule.
	* Test.Rules.BadPractice.mdp: Update MD project file.

2008-06-30  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidVisibleConstantFieldRule.cs: New. Unit tests for 
	AvoidVisibleConstantFieldRule
	* Test.Rules.BadPractice.mdp: Update MD project file.

2008-06-28  Sebastien Pouliot  <sebastien@ximian.com>

	* ReplaceIncompleteOddnessCheckTest.cs: New. Unit tests for 
	ReplaceIncompleteOddnessCheckRule
	* Test.Rules.BadPractice.mdp: Update MD project file.

2008-05-18  Sebastien Pouliot  <sebastien@ximian.com>

	* ObsoleteMessagesShouldNotBeEmptyTest.cs: New. Unit tests for
	ObsoleteMessagesShouldNotBeEmptyRule

2008-05-10  Andres G. Aragoneses <aaragoneses@novell.com> 

	* CheckNewExceptionWithoutThrowingTest.cs,
	  CloneMethodShouldNotReturnNullTest.cs,
	  ConstructorShouldNotCallVirtualMethodsTest.cs,
	  CheckNewThreadWithoutStartTest.cs,
	  GetEntryAssemblyMayReturnNullTest.cs, Test.Rules.BadPractice.mdp,
	  ToStringReturnsNullTest.cs, DisableDebuggingCodeTest.cs: Update (to
	  fix build): somebody forgot to include the new namespace when
	  moving TestRunner.

2008-05-04  Sebastien Pouliot  <sebastien@ximian.com>

	* EqualShouldHandleNullArgTest.cs: Convert test cases to new 
	format. Add new test cases based on Mono BCL (old) false positives.

2008-04-23  Sebastien Pouliot  <sebastien@ximian.com>

	* DisableDebuggingCodeTest.cs: Adapt to change for Initialize 
	behavior. If a runner desactivate a rule then it should not 
	re-activate itself.

2008-03-07  Sebastien Pouliot  <sebastien@ximian.com>

	* DisableDebuggingCodeTest.cs: New. Unit tests for 
	DisableDebuggingCodeRule.
	* Test.Rules.BadPractice.mdp: Update MD project file.
