@@ -1,3 +1,9 @@
+2008-07-13  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* DoNotForgetNotImplementedMethodsTest.cs: Test cases for
+	DoNotForgetNotImplementedMethodsRule [committed for Cedric Vivier]
+	* Test.Rules.BadPractice.mdp: Update MD project file.
+
 2008-07-03  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* AvoidCallingProblematicMethodsTest.cs: Add two more test cases
